<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PeriodCalculatorActivity">



        <Button
            android:id="@+id/btnMonthlyCal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="#D8D3D3"
            android:text="@string/go_to_n_monthly_payment_calculator"
            android:background="@drawable/rounded_button"/>

        <TextView
            android:id="@+id/txtNamePage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/period_calculator"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:weightSum="3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/period"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/monthly_payment"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingTop="20dp"
                    android:gravity="center"
                    android:text="@string/total"
                    android:textSize="20sp" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:weightSum="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtPeriod"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/_0"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/txtLastMonthlyPayments"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/_0_dollar"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtTotal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/_0_dollar"
                    android:textSize="20sp" />



            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:weightSum="3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/principal"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/annual_rate"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/monthly_payment"
                    android:textSize="20sp" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:weightSum="3">


                <EditText
                    android:id="@+id/editPrincipal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/_100000"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor,NestedWeights" />

                <EditText
                    android:id="@+id/editAnnualRate"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/_6"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor"/>

                <EditText
                    android:id="@+id/editMonthlyPayment"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/_1000"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor"/>

            </LinearLayout>






        </LinearLayout>



        <Button
            android:id="@+id/btnCalculateMonthlyPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:textColor="#D8D3D3"
            android:background="@drawable/rounded_button"
            android:text="@string/calculate_monthly_n_payment" />




</LinearLayout>